--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,7 +16,7 @@
         <item
             android:id="@+id/nav_my_profile"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Mail Him" />
+            android:title="Mail Himmmmmmmmmmmm" />
 
 
     </group>
