--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,13 +9,13 @@
         android:id="@+id/nav_home"
         android:name="com.example.helloworldapplication.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/Home" />
+        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.example.helloworldapplication.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/MyOrders" />
+        tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
