--- a/app/src/main/res/layout/activity_new_reg.xml
+++ b/app/src/main/res/layout/activity_new_reg.xml
@@ -111,13 +111,12 @@
 
     <Button
         android:id="@+id/RbtReg"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/ReditDist"
         android:layout_marginTop="24dp"
         android:background="@color/black"
         android:text="Register And Sign-In"
-        android:layout_below="@id/ReditDist"
-        android:layout_marginLeft="100dp"
         android:textColor="#FBF7F7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -168,7 +167,7 @@
         android:layout_alignBaseline="@id/ReditTextPhone"
         android:layout_alignRight="@id/ReditTextPhone"
         android:layout_marginTop="28dp"
-        android:layout_marginRight="-147dp"
+        android:layout_marginRight="-127dp"
         android:text="Send OTP" />
 
     <EditText
@@ -190,7 +189,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/Rotp"
         android:layout_alignRight="@id/Rotp"
-        android:layout_marginRight="-147dp"
+        android:layout_marginRight="-127dp"
         android:text="Verify " />
 
 
