--- a/app/src/main/res/layout/activity_new_reg.xml
+++ b/app/src/main/res/layout/activity_new_reg.xml
@@ -11,11 +11,12 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="218dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Register User"
         android:layout_marginLeft="100dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="Register User"
 
         android:textColor="#EFF1E9"
         android:textSize="30sp"
@@ -112,11 +113,13 @@
     <Button
         android:id="@+id/RbtReg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_below="@id/ReditDist"
         android:layout_marginTop="24dp"
         android:background="@color/black"
         android:text="Register And Sign-In"
+
+        android:backgroundTint="@android:color/holo_orange_dark"
         android:textColor="#FBF7F7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -168,6 +171,7 @@
         android:layout_alignRight="@id/ReditTextPhone"
         android:layout_marginTop="28dp"
         android:layout_marginRight="-127dp"
+        android:backgroundTint="@android:color/holo_red_light"
         android:text="Send OTP" />
 
     <EditText
@@ -190,6 +194,7 @@
         android:layout_alignBaseline="@id/Rotp"
         android:layout_alignRight="@id/Rotp"
         android:layout_marginRight="-127dp"
+        android:backgroundTint="@android:color/holo_red_dark"
         android:text="Verify " />
 
 
