--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,33 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.helloworldapplication.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_my_order"
+        android:name="com.example.helloworldapplication.ui.my_order.my_orderFragment"
+        android:label="My Order"
+        tools:layout="@layout/fragment_my_order" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.helloworldapplication.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_my_profile"
+        android:name="com.example.helloworldapplication.ui.my_profile.my_profileFragment"
+        android:label="My Profile"
+        tools:layout="@layout/fragment_my_profile" />
+    <fragment
+        android:id="@+id/nav_help"
+        android:name="com.example.helloworldapplication.ui.help.HelpFragment"
+        android:label="Help Center"
+        tools:layout="@layout/fragment_help" />
+    <fragment
+        android:id="@+id/nav_policy"
+        android:name="com.example.helloworldapplication.ui.policy.PolicyFragment"
+        android:label="Privacy Policy"
+        tools:layout="@layout/fragment_policy" />
+    <fragment
+        android:id="@+id/nav_about_us"
+        android:name="com.example.helloworldapplication.ui.about_us.About_UsFragment"
+        android:label="About Us"
+        tools:layout="@layout/fragment_policy" />
+
+
+
+
 </navigation>
