--- a/app/src/main/res/layout/fragment_about__us.xml
+++ b/app/src/main/res/layout/fragment_about__us.xml
@@ -8,7 +8,17 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
+        android:textStyle="bold"
+        android:background="#212720"
+        android:textColor="@color/white"
         android:layout_height="match_parent"
-        android:text="THIS IS ABOUT US FRAGMENT" />
+        android:text="\n\t\tWelcome to Eventiators , your number one source for all services. We're dedicated to providing you the very best of services , with an emphasis on excellence, qualitative work, quick service .
+\n\n\t\tFounded in 2021 by Team Platinum Developers, Eventiators  has come a long way from its beginnings in Maharshtra. When Team first started out, their passion for 'qiuck and doorstep serivices for consumer' drove them to start their own business.
+\n\n\t\tWe hope you enjoy our products as much as we enjoy offering them to you. If you have any questions or comments, please don't hesitate to contact us.
+\n\n\tSincerely,
+\n\tTeam Platinum developers,
+\n\tPune,
+\n\tMaharshtra,
+\n\tIndia." />
 
 </FrameLayout>
