chnages commited on wednesday of 26th of may

--- a/app/src/main/res/layout/activity_decore_event_by_intent.xml
+++ b/app/src/main/res/layout/activity_decore_event_by_intent.xml
@@ -1,53 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".DecoreEventByIntent">
 
-    <ImageView
-        android:id="@+id/imageinintent"
-        android:layout_width="273dp"
-        android:layout_height="271dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.036"
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@android:color/holo_red_light">
 
-    <TextView
-        android:id="@+id/textView9"
+
+
+
+    <GridLayout
+        android:id="@+id/decore_event_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:alignmentMode="alignMargins"
+        android:columnCount="1"
+        android:rowCount="1"
+        android:minHeight="800dp"
+        android:columnOrderPreserved="false"
+        >
+    <androidx.cardview.widget.CardView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_rowWeight="1"
+        android:layout_columnWeight="1"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp">
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageinintent" />
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="5dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        <ImageView
+            android:layout_width="334dp"
+            android:layout_height="280dp"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/imageinintent"
+           />
+        <TextView
+            android:id="@+id/set_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Set Name"
+            android:textStyle="bold"
+            android:layout_marginTop="25dp"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textAlignment="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:id="@+id/set_code"
+            android:textStyle="bold"
+            android:layout_marginTop="25dp"
+            android:text="Set Code"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            />
+        <TextView
+            android:id="@+id/set_Price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Price Charge"
+            android:textStyle="bold"
+            android:layout_marginTop="25dp"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textAlignment="center"/>
 
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/set_dis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:text="Description Box"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+             />
+
+        <ProgressBar
+            android:id="@+id/progressBar_decore"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="139dp"
+            android:layout_height="37dp"
+            android:layout_gravity="center" />
+
+        <EditText
+            android:id="@+id/edittext_for_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:ems="10"
+            android:hint="Enter Date OF Your Event [dd/mm/yyyy]"
+            android:inputType="textPersonName" />
+        <EditText
+            android:id="@+id/editText_for_add"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="Enter Address Of Event  " />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:layout_marginTop="25dp"
+            android:id="@+id/button_for_order_decore_set"
+            android:text="Order Decoration Set"/>
+
+    </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+
+
+    </GridLayout>
+    </LinearLayout>
+
+
+</ScrollView>
