--- a/app/src/main/res/layout/fragment_my_order.xml
+++ b/app/src/main/res/layout/fragment_my_order.xml
@@ -4,14 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.my_order.my_orderFragment">
+    tools:context=".ui.my_order.my_orderFragment"
+    android:background="#A2AE95">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/decoration_order"
+
+    <Button
+        android:id="@+id/button_to_display_decoration_order"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:backgroundTint="#B82D5E"
+        android:text="View Decoration Orders"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_to_display_photographer_bookings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#B82D5E"
+        android:text="View Photographer Bookings"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_to_display_decoration_order" />
+
+    <Button
+        android:id="@+id/button_to_display_catering_service_orders"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#B82D5E"
+        android:layout_marginTop="16dp"
+        android:textSize="20sp"
+        android:text="View Catering Services Orders"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_to_display_photographer_bookings" />
+
+    <Button
+        android:id="@+id/button_to_display_cake_order"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#B82D5E"
+        android:layout_marginTop="16dp"
+        android:textSize="20sp"
+        android:text="View  Cake Orders"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_to_display_catering_service_orders" />
+
+    <Button
+        android:id="@+id/button_to_display_gift_order"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#B82D5E"
+        android:layout_marginTop="16dp"
+        android:text="View Gift Orders"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_to_display_cake_order" />
 </androidx.constraintlayout.widget.ConstraintLayout>
