--- a/app/src/main/res/layout/activity_view_cake_orders.xml
+++ b/app/src/main/res/layout/activity_view_cake_orders.xml
@@ -5,5 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".View_cake_orders">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cake_order_recycylerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
